fix(kit): fix horizontal scroll with `tuiMultiSelectGroup` and large item in `tui-data-list` (#7375)

--- a/projects/kit/components/multi-select-option/multi-select-option.style.less
+++ b/projects/kit/components/multi-select-option/multi-select-option.style.less
@@ -13,7 +13,6 @@
     display: flex;
     flex: 1;
     align-items: center;
-    overflow: hidden;
     animation: retrigger 1s;
 }
 
